# verilog2vhdl

./: Cargo.toml  README.md  verilog2vhdl.el
examples/: simple_adder.v
src/: lib.rs  main.rs
src/converter/: mod.rs  module_conv.rs  port.rs  verilog_type.rs
src/parser/: ast.rs  lexer.rs  mod.rs  verilog.pest  verilog.rs
tests/: case_tests.rs  conversion_tests.rs
tests/cases/: block_comment_between_ports.v  block_comment_port.v  comment_between_ports.v  empty_file.v  empty_module.v  expr_params.v  inline_comment_port.v  many_params.v  many_params_many_ports.v  many_ports.v  mixed_directions.v  module_only_params.v  multi_dim_ports.v  multi_line_params.v  multi_module.v  multidim_mux.v  multidim_mux.vhd  no_params_no_ports.v  no_ports.v  no_ports.vhd  no_semicolon.v  only_comments.v  only_directives.v  only_inputs.v  only_outputs.v  param_binary.v  param_binary_long.v  param_binary_upper.v  param_bit.v  param_bit_value.v  param_bitwise_and.v  param_bitwise_or.v  param_bitwise_xor.v  param_blank.v  param_block_comment.v  param_brace_style.v  param_braces.v  param_comma_expr.v  param_complex_expr.v  param_concat.v  (+224 more)
